<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.NoteEditFragment">
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_edit_photo_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_edit_photo_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_photo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_edit_url_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_edit_url_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_url"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_edit_title_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_edit_title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_edit_description_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_edit_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_description"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <LinearLayout
        android:id="@+id/note_edit_buttons_container"
        style="@style/field_container">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/note_edit_cancel"
            style="@style/edit_label"
            android:text="@string/edit_bt_cancel"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/note_edit_save"
            style="@style/edit_label"
            android:text="@string/edit_bt_save"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>